ReFactor: #18 :Polished code structure and comments, added/fixed all test cases