@@ -35,11 +35,11 @@ public class FlightManager {
     }
 
     /**************************************************************************
-     * Builderclass for our FlightManager
+     * Builder class for our FlightManager
      *
-     * @param previousResult stores the JSONobjects properties from the previous 
+     * @param previousResult stores the JSONObject properties from the previous
      * action
-     * @param algorithmManager moves through our algorithm for scanning the 
+     * @param algorithmManager moves through our algorithm for scanning the
      * island
      * @param droneStatus stores the drones current status (direction, 
      * coordinates, battery, etc.)
@@ -122,7 +122,7 @@ public class FlightManager {
         logger.info("** Cost of previous action: {}", results.getInt("cost"));
         previousResult.setPreviousResult(results.getInt("cost"), results.getString("status"), results.getJSONObject("extras"));
         
-        for (StatusObserver observer: statusObservers) { // Notify all observers that a decision has been made and we have results (Pull strategy)
+        for (StatusObserver observer: statusObservers) { // Notify all observers that a decision has been made, and we have results (Pull strategy)
             observer.updateStatus(this.droneStatus, this.previousResult, this.poiManager);
         }
     }
@@ -130,7 +130,7 @@ public class FlightManager {
     /**************************************************************************
      * Adds an observer to watch a status of a drone
      *
-     * @param observer an observer type object which is used to update a certan
+     * @param observer an observer type object which is used to update a certain
      * drone status
     **************************************************************************/
     private void addStatusObserver(StatusObserver observer) {
@@ -148,31 +148,20 @@ public class FlightManager {
         ArrayList<Creek> creeks = poiManager.getCreeks();
         Creek nearestCreek = poiManager.getNearestCreek();
         Site site = poiManager.getSite();
-       
-        switch (reportCase) {
-            case 1:
-                finalReport = String.format(
+
+        finalReport = switch (reportCase) {
+            case 1 -> String.format(
                     "Final Report: Emergency Site (%s) found at [%d,%d], nearest Creek Inlet (%s) found at [%d,%d].",
-                    site.getSiteID(), site.getSiteCoordinate().getX(), site.getSiteCoordinate().getY(), 
+                    site.getSiteID(), site.getSiteCoordinate().getX(), site.getSiteCoordinate().getY(),
                     nearestCreek.getCreekID(), nearestCreek.getCreekCoordinate().getX(), nearestCreek.getCreekCoordinate().getY());
-                break;
-            
-            case 2:
-                finalReport = String.format(
+            case 2 -> String.format(
                     "Final Report: Emergency Site (%s) found at [%d,%d], no Creek Inlets found.",
                     site.getSiteID(), site.getSiteCoordinate().getX(), site.getSiteCoordinate().getY());
-                break;
-
-            case 3:
-                finalReport = String.format(
+            case 3 -> String.format(
                     "Final Report: Creek Inlet (%s) found at [%d,%d].",
-                    creeks.get(0).getCreekID(), creeks.get(0).getCreekCoordinate().getX(), creeks.get(0).getCreekCoordinate().getY());
-                break;
-
-            default:
-                finalReport = "No POIs Found.";
-                break;
-        }
+                    creeks.getFirst().getCreekID(), creeks.getFirst().getCreekCoordinate().getX(), creeks.getFirst().getCreekCoordinate().getY());
+            default -> "No POIs Found.";
+        };
 
         return finalReport;
     }
